Updating the gh-page.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-	<title>myles/idelicious @ GitHub</title>
+	<title>iDelicious @ GitHub</title>
 	
 	<style type="text/css">
 		body {
@@ -45,7 +45,7 @@
         <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
     </div>
       
-    <h1><a href="http://github.com/myles/idelicious">idelicious</a> 
+    <h1><a href="http://github.com/myles/idelicious">iDelicious</a> 
       <span class="small">by <a href="http://github.com/myles">myles</a></small></h1>
 
     <div class="description">
@@ -58,9 +58,7 @@
 <h2>License</h2>
 <p><a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache License, Version 2.0</a></p>
 <h2>Authors</h2>
-<p>Myles Braithwaite (me@mylesbraithwaite.com)<br/><br/>      </p>
-<h2>Contact</h2>
-<p>Myles Braithwaite (myles@monkeyinyoursoul.com)<br/>      </p>
+<p>Myles Braithwaite (me@mylesbraithwaite.com)</p>
 
 
     <h2>Download</h2>
