--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
 </p>
 <h2>License</h2>
 <p><a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache License, Version 2.0</a></p>
+<h2>Demo</h2>
+<p><a href="http://i-del-icio-us.appspot.com/">i-del-icio-us.appspot.com</a></p>
 <h2>Authors</h2>
 <p>Myles Braithwaite (me@mylesbraithwaite.com)</p>
 
